fixes select overflow grid

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 
-
-body {
-    font-size: 2.5vh;
+/* small screen and general styles */
+.site {
+    font-size: 25px;
     font-family: Arial, Helvetica, sans-serif;
     color: #393939;
     background: #EEEEEE;
@@ -11,16 +11,27 @@ body {
         "title"
         "main"
         "bottom";
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr 2fr 1fr;
-    align-items: center;
-    justify-content: center;
 }
 
-#site_header {
+/* prevents the select from overflowing */
+select {
+    width: 100%;
+    font-size: 22px;
+}
+
+#title {
     grid-area: title;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
 }
 
-form {
+/* form in which conversion infromation is inputed */
+.conversion_section {
     padding: 20px;
     grid-area: main;
     display: grid;
@@ -31,8 +42,10 @@ form {
         "converted-value"
         "converted-currency"
         "date";
+    grid-template-columns: 1fr;
 }
 
+/* places form elements on the grid */
 #base_value {
     grid-area: base-value;
 }
@@ -43,6 +56,8 @@ form {
 
 .swap_button {
     grid-area: swap;
+    margin: 12px auto;
+    width: 100%;
 }
 
 #converted_value {
@@ -60,135 +75,31 @@ form {
 .labeled_input {
     display: flex;
     flex-direction: column;
-    margin: 10px auto;
-}
-
-/*
-input[type=number] {
-  -moz-appearance: textfield;
-}
-
-h1 {
-    width: min-content;
-    text-align: center;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    margin: 12px auto;
     width: 100%;
 }
 
-i {
-    font-size: 80px;
-}
-
-.input_section {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-}
-
-.values {
-    flex-direction: column-reverse;
-}
-
-.labeled_input {
-    margin: 1%;
-}
-
-.swap_button {
-    border: none;
-    background: transparent;
-    cursor: pointer;
-    padding-top: 2vh;
-    font-size: 35px;
-}
-
-.date_input {
-    width: 87.5%;
-}
-
-label {
-    display: block;
-}
-
-input {
-    width: 95%;
-    font-size: 5.5vw;
-    box-sizing: content-box;
-    padding: 2.5% 1%;
-    margin: 1%;
-    border: darkgray 1px solid;
-    background-repeat: no-repeat;
-    background-position: right;
-    background-color: white;
-}
-
-select {
-    width: 95%;
-    font-size: 5.5vw;
-    box-sizing: content-box;
-    padding: 2.5% 1%;
-    margin: 1%;
-    border: darkgray 1px solid;
-    background: url('../res/keyboard_arrow_down-black-18dp.svg');
-    background-repeat: no-repeat;
-    background-position: right;
-    background-color: white;
-    -webkit-appearance: none;
-}
-
-select option span {
-    font-size: 4.5vw;
-}
-
-@media screen and (min-width: 768px) {
-    body {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        font-size: 25px;
-    }
-
-    form {
-        width: max(50%, 900px);
-    }
-
-    .swap_button {
-        border: none;
-        background: transparent;
-        cursor: pointer;
-        padding-top: 2vh;
-        font-size: 35px;
-    }
-
-    .input_section {
-        flex-direction: row;
-    }
-
-    .labeled_input {
-        width: 50%;
-    }
-
-    input {
+/* large screen styles */
+@media screen and (min-width: 600px) {
+    .site {
+        grid-template-areas: 
+            "left title right"
+            "left main right"
+            "left bottom right";
         font-size: 30px;
-        padding: 2% 1%;
-        border: darkgray 1px solid;
+        grid-template-columns: 1fr min(100%, 850px) 1fr;
     }
 
-    select {
-        font-size: 30px;
-        padding: 2% 1%;
-        border: darkgray 1px solid;
-        background: url('../res/keyboard_arrow_down-black-18dp.svg');
-        background-repeat: no-repeat;
-        background-position: right;
-        background-color: white;
-        -webkit-appearance: none;
+    /* creates grid for large screen devices */
+    .conversion_section {
+        display: grid;
+        grid-area: main;
+        grid-template-areas: 
+            "base-value base-value converted-value converted-value"
+            "base-currency base-currency converted-currency converted-currency"
+            "left swap swap right"
+            "left date date right";
+            column-gap: 20px;
+        grid-template-columns: repeat(4, 1fr);
     }
-
-}*/
-
+}
